--- a/roles/resource_manager/tasks/remediate.yaml
+++ b/roles/resource_manager/tasks/remediate.yaml
@@ -4,7 +4,7 @@
 
 - name: Retrieve host vars and save locally
   ansible.builtin.include_tasks: includes/retrieve.yaml
-  when: data_store.scm is defined
+  when: data_store['scm'] is defined
 
 - name: Get list of SOT files
   ansible.builtin.find:
