--- a/roles/resource_manager/includes/inventory.yaml
+++ b/roles/resource_manager/includes/inventory.yaml
@@ -2,12 +2,12 @@
 - name: Set default host vars path
   ansible.builtin.set_fact:
     inventory_directory: "."
-  when: data_store.local is not defined
+  when: data_store['local'] is not defined
 
 - name: Set default host vars path
   ansible.builtin.set_fact:
     inventory_directory: "{{ data_store['local'] }}"
-  when: data_store.local is defined
+  when: data_store['local'] is defined
 
 - name: Set default path
   ansible.builtin.set_fact:
