--- a/roles/resource_manager/includes/publish.yaml
+++ b/roles/resource_manager/includes/publish.yaml
@@ -3,7 +3,7 @@
   ansible.scm.git_publish:
     path: "{{ repository['path'] }}"
     timeout: 120
-  when: data_store.scm.origin.token is undefined
+  when: data_store['scm']['origin']['token'] is undefined
 
 - name: Publish the changes
   ansible.scm.git_publish:
@@ -11,4 +11,4 @@
     token: "{{ data_store['scm']['origin']['token'] }}"
     user: "{{ data_store['scm']['origin']['user'] }}"
     timeout: 120
-  when: data_store.scm.origin.token is defined
+  when: data_store['scm']['origin']['token'] is defined
