make action operation

--- a/roles/resource_manager/includes/build.yml
+++ b/roles/resource_manager/includes/build.yml
@@ -10,12 +10,12 @@
   ansible.builtin.debug:
     msg: "{{ result }}"
   when:
-    - action != 'persist'
+    - operation != 'persist'
 
 - name: Include file write task
   ansible.builtin.include_tasks: includes/write_to_file.yaml
   when:
-    - action == 'persist'
+    - operation == 'persist'
     - ignore_empty is undefined
     - result["gathered"] != {}
     - result["gathered"] != []
@@ -23,5 +23,5 @@
 - name: Include file write task
   ansible.builtin.include_tasks: includes/write_to_file.yaml
   when:
-    - action == 'persist'
+    - operation == 'persist'
     - ignore_empty is defined
