--- a/roles/resource_manager/tasks/main.yml
+++ b/roles/resource_manager/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Run the platform specific tasks
-  ansible.builtin.include_tasks: "./{{ action }}.yaml"
+  ansible.builtin.include_tasks: "./{{ operation }}.yaml"
   with_first_found:
-    - "{{ action }}.yaml"
+    - "{{ operation }}.yaml"
     - "includes/unsupported_task.yaml"
