fix lint var-naming

--- a/roles/resource_manager/includes/check_drift.yaml
+++ b/roles/resource_manager/includes/check_drift.yaml
@@ -1,10 +1,10 @@
 ---
 - name: Set facts
   ansible.builtin.set_fact:
-    resource: "{{ (rms.path | basename).split('.') | first }}"
+    resource_manager_resource: "{{ (rms.path | basename).split('.') | first }}"
 
 - name: "Start detecting config drift"
-  when: resource in resources
+  when: resource_manager_resource in resources
   block:
     - name: Grab the resource facts
       ansible.builtin.include_vars:
@@ -14,19 +14,19 @@
     - name: Check for config drift
       ansible.netcommon.network_resource:
         os_name: "{{ ansible_network_os }}"
-        name: "{{ ansible_network_os.split('.')[-1] }}_{{ resource }}"
-        config: "{{ module_vars[resource] }}"
+        name: "{{ ansible_network_os.split('.')[-1] }}_{{ resource_manager_resource }}"
+        config: "{{ module_vars[resource_manager_resource] }}"
         state: "{{ state }}"
       check_mode: true
-      register: result
+      register: resource_manager_result
 
     - name: Show the difference in configuration
       ansible.utils.fact_diff:
-        before: "{{ result.before }}"
-        after: "{{ module_vars[resource] }}"
-      when: result.commands|length != 0
+        before: "{{ resource_manager_result.before }}"
+        after: "{{ module_vars[resource_manager_resource] }}"
+      when: resource_manager_result.commands|length != 0
 
     - name: Detect if there is config drift.
       ansible.builtin.fail:
-        msg: "configuration drift is found in {{ result.resource_module_name }} Resource"
-      when: result.commands|length != 0
+        msg: "configuration drift is found in {{ resource_manager_result.resource_module_name }} Resource"
+      when: resource_manager_result.commands|length != 0
