--- a/roles/resource_manager/includes/inventory.yaml
+++ b/roles/resource_manager/includes/inventory.yaml
@@ -1,20 +1,20 @@
 ---
 - name: Set default host vars path
   ansible.builtin.set_fact:
-    inventory_directory: "."
+    resource_manager_inventory_directory: "."
   when: data_store['local'] is not defined
 
 - name: Set default host vars path
   ansible.builtin.set_fact:
-    inventory_directory: "{{ data_store['local'] }}"
+    resource_manager_inventory_directory: "{{ data_store['local'] }}"
   when: data_store['local'] is defined
 
 - name: Set default path
   ansible.builtin.set_fact:
-    inventory_path: "{{ repository['path'] }}"
+    resource_manager_inventory_path: "{{ repository['path'] }}"
   when: repository is defined
 
 - name: Set default path
   ansible.builtin.set_fact:
-    inventory_path: "{{ inventory_directory }}"
+    resource_manager_inventory_path: "{{ resource_manager_inventory_directory }}"
   when: repository is not defined
