--- a/roles/resource_manager/includes/retrieve.yaml
+++ b/roles/resource_manager/includes/retrieve.yaml
@@ -2,12 +2,12 @@
 - name: Perform retrieve with provided credentials
   when: data_store.scm.origin.token is defined
   block:
-    - name: Retrive the host vars with provided token access
+    - name: Retrieve the host vars with provided token access
       ansible.scm.git_retrieve:
         origin:
           url: "{{ data_store['scm']['origin']['url'] }}"
           token: "{{ data_store['scm']['origin']['token'] }}"
-        parent_directory: "{{ inventory_directory }}"
+        parent_directory: "{{ resource_manager_inventory_directory }}"
       register: result
 
     - name: Update data store path
@@ -17,11 +17,11 @@
 - name: Perform retrieve with default settings
   when: data_store.scm.origin.token is undefined
   block:
-    - name: Retrieve host vars with defualt access
+    - name: Retrieve host vars with default access
       ansible.scm.git_retrieve:
         origin:
           url: "{{ data_store['scm']['origin']['url'] }}"
-        parent_directory: "{{ inventory_directory }}"
+        parent_directory: "{{ resource_manager_inventory_directory }}"
       register: result
 
     - name: Update data store path
