--- a/roles/resource_manager/tasks/gather.yaml
+++ b/roles/resource_manager/tasks/gather.yaml
@@ -11,10 +11,10 @@
 
 - name: Set network resources
   ansible.builtin.set_fact:
-    network_resources: "{{ network_resources_list['modules'] | ansible.utils.param_list_compare(resources) }}"
+    resource_manager_network_resources: "{{ network_resources_list['modules'] | ansible.utils.param_list_compare(resources) }}"
 
 - name: Include build tasks
   ansible.builtin.include_tasks: includes/build.yaml
-  loop: "{{ network_resources['actionable'] }}"
+  loop: "{{ resource_manager_network_resources['actionable'] }}"
   loop_control:
     loop_var: res
