--- a/roles/resource_manager/tasks/detect.yaml
+++ b/roles/resource_manager/tasks/detect.yaml
@@ -2,16 +2,16 @@
 - name: Get the supported resource modules
   ansible.netcommon.network_resource:
     os_name: "{{ ansible_network_os }}"
-  register: network_resources_list
+  register: resource_manager_network_resources_list
 
 - name: Set resources
   ansible.builtin.set_fact:
-    resource_manager_resources: "{{ network_resources_list['modules'] }}"
+    resource_manager_resources: "{{ resource_manager_network_resources_list['modules'] }}"
   when: resource_manager_resources is undefined
 
 - name: Set Network resources
   ansible.builtin.set_fact:
-    resource_manager_network_resources: "{{ network_resources_list['modules'] | ansible.utils.param_list_compare(resource_manager_resources) }}"
+    resource_manager_network_resources: "{{ resource_manager_network_resources_list['modules'] | ansible.utils.param_list_compare(resource_manager_resources) }}"
 
 - name: Resolve inventory
   ansible.builtin.include_tasks: includes/inventory.yaml
@@ -30,8 +30,8 @@
 
 - name: Set default state as 'overridden'
   ansible.builtin.set_fact:
-    state: 'overridden'
-  when: state is not defined
+    resource_manager_state: 'overridden'
+  when: resource_manager_state is not defined
 
 - name: Include check_drift task
   ansible.builtin.include_tasks: includes/check_drift.yaml
