--- a/roles/resource_manager/tasks/remediate.yaml
+++ b/roles/resource_manager/tasks/remediate.yaml
@@ -16,8 +16,8 @@
 
 - name: Set state as overridden to restore config
   ansible.builtin.set_fact:
-    state: overridden
-  when: state is not defined
+    resource_manager_state: overridden
+  when: resource_manager_state is not defined
 
 - name: Rectify drift
   ansible.builtin.include_tasks: includes/configure.yaml
