--- a/roles/resource_manager/includes/edit_resource.yaml
+++ b/roles/resource_manager/includes/edit_resource.yaml
@@ -4,7 +4,7 @@
     os_name: "{{ ansible_network_os }}"
     name: "{{ ansible_network_os.split('.')[-1] }}_{{ resource_manager_lst }}"
     config: "{{ module_vars[resource_manager_resource] }}"
-    state: "{{ state }}"
+    state: "{{ resource_manager_state }}"
   when:
     - resource_manager_lst in resource_manager_resources
     - module_vars[resource_manager_resource]
