--- a/roles/resource_manager/includes/retrieve.yaml
+++ b/roles/resource_manager/includes/retrieve.yaml
@@ -8,11 +8,11 @@
           url: "{{ data_store['scm']['origin']['url'] }}"
           token: "{{ data_store['scm']['origin']['token'] }}"
         parent_directory: "{{ resource_manager_inventory_directory }}"
-      register: result
+      register: resource_manager_result
 
     - name: Update data store path
       ansible.builtin.set_fact:
-        repository: "{{ result }}"
+        resource_manager_repository: "{{ resource_manager_result }}"
 
 - name: Perform retrieve with default settings
   when: data_store.scm.origin.token is undefined
@@ -22,12 +22,12 @@
         origin:
           url: "{{ data_store['scm']['origin']['url'] }}"
         parent_directory: "{{ resource_manager_inventory_directory }}"
-      register: result
+      register: resource_manager_result
 
     - name: Update data store path
       ansible.builtin.set_fact:
-        repository: "{{ result }}"
+        resource_manager_repository: "{{ resource_manager_result }}"
 
 - name: Update Inventory Path
   ansible.builtin.set_fact:
-    inventory_path: "{{ repository['path'] }}"
+    resource_manager_inventory_path: "{{ resource_manager_repository['path'] }}"
