--- a/roles/resource_manager/tasks/remediate.yaml
+++ b/roles/resource_manager/tasks/remediate.yaml
@@ -8,7 +8,7 @@
 
 - name: Get list of SOT files
   ansible.builtin.find:
-    paths: "{{ inventory_path }}/host_vars/{{ inventory_hostname }}"
+    paths: "{{ resource_manager_inventory_path }}/host_vars/{{ inventory_hostname }}"
     recurse: false
     patterns: "*.yaml"
     file_type: file
