--- a/changelogs/fragments/make_action_operation.yml
+++ b/changelogs/fragments/make_action_operation.yml
@@ -1,3 +1,6 @@
 ---
 major_changes:
   - Rename variable action as operation, on behalf of ansible-lint var-naming error for reserved Ansible keywords.
+  - Rename role varibles to follow role_name_var varible naming pattern for roles.
+doc_changes:
+  - Fix misspelled words in README, and fix examples.
