--- a/roles/resource_manager/includes/write_to_file.yaml
+++ b/roles/resource_manager/includes/write_to_file.yaml
@@ -7,6 +7,6 @@
 
 - name: Write each resource to a file
   ansible.builtin.copy:
-    content: "{{ {res: result['gathered']} | to_nice_yaml }}"
+    content: "{{ {res: resource_manager_result['gathered']} | to_nice_yaml }}"
     dest: "{{ resource_manager_inventory_path }}/host_vars/{{ inventory_hostname }}/{{ res }}.yaml"
     mode: '0755'
