--- a/roles/resource_manager/includes/write_to_file.yaml
+++ b/roles/resource_manager/includes/write_to_file.yaml
@@ -3,10 +3,12 @@
   ansible.builtin.file:
     path: "{{ resource_manager_inventory_path }}/host_vars/{{ inventory_hostname }}"
     state: directory
-    mode: '0755'
+    mode: '0777'
+  delegate_to: localhost
 
 - name: Write each resource to a file
   ansible.builtin.copy:
-    content: "{{ {res: resource_manager_result['gathered']} | to_nice_yaml }}"
+    content: "{{ {res: result['gathered']} | to_nice_yaml }}"
     dest: "{{ resource_manager_inventory_path }}/host_vars/{{ inventory_hostname }}/{{ res }}.yaml"
-    mode: '0755'
+    mode: '0777'
+  delegate_to: localhost
