--- a/roles/resource_manager/includes/publish.yaml
+++ b/roles/resource_manager/includes/publish.yaml
@@ -1,13 +1,13 @@
 ---
 - name: Publish the persist changes
   ansible.scm.git_publish:
-    path: "{{ repository['path'] }}"
+    path: "{{ resource_manager_repository['path'] }}"
     timeout: 120
   when: data_store['scm']['origin']['token'] is undefined
 
 - name: Publish the changes
   ansible.scm.git_publish:
-    path: "{{ repository['path'] }}"
+    path: "{{ resource_manager_repository['path'] }}"
     token: "{{ data_store['scm']['origin']['token'] }}"
     user: "{{ data_store['scm']['origin']['user'] }}"
     timeout: 120
