--- a/roles/resource_manager/includes/publish.yaml
+++ b/roles/resource_manager/includes/publish.yaml
@@ -9,6 +9,6 @@
   ansible.scm.git_publish:
     path: "{{ resource_manager_repository['path'] }}"
     token: "{{ data_store['scm']['origin']['token'] }}"
-    user: "{{ data_store['scm']['origin']['user'] }}"
+    user: "{{ data_store['scm']['origin']['user'] | d({}) }}"
     timeout: 120
   when: data_store['scm']['origin']['token'] is defined
