--- a/.config/ansible-lint.yml
+++ b/.config/ansible-lint.yml
@@ -1,3 +1,3 @@
 ---
 skip_list:
-  - no-role-prefix
+  - var-naming[no-role-prefix]  # this rule error out correct vars names for network validated content.
