Update drift tests and fixes
Signed-off-by: rohitthakur2590 <rohitthakur2590@outlook.com>

--- a/roles/resource_manager/includes/check_drift.yaml
+++ b/roles/resource_manager/includes/check_drift.yaml
@@ -30,4 +30,4 @@
       ansible.builtin.fail:
         msg: "configuration drift is found in {{ resource_manager_result.resource_module_name }} Resource"
       when:
-        - resource_manager_result.changed == true
+        - resource_manager_result.changed
