--- a/changelogs/fragments/update_tests.yaml
+++ b/changelogs/fragments/update_tests.yaml
@@ -1,3 +1,5 @@
 ---
-trivial:
+bugfixes:
+  - confirm drift based on changed status rather than commands.
+doc_changes:
   - Update tests for gather, persist, remediate and deploy.
