--- a/tests/integration/targets/base_detect/tasks/main.yaml
+++ b/tests/integration/targets/base_detect/tasks/main.yaml
@@ -15,6 +15,11 @@
           - 'l2_interfaces'
           - 'l3_interfaces'
 
+    - name: Set data data_store
+      ansible.builtin.set_fact:
+        test_data_store:
+          local: "~/test_backup"
+
     - name: Run network.base validated content with persist operation
       ansible.builtin.include_role:
         name: network.base.resource_manager
@@ -22,8 +27,7 @@
         operation: persist
         persist_empty: true
         resources: "{{ test_resources }}"
-        data_store:
-          local: "~/test_backup"
+        data_store: "{{ test_data_store }}"
 
     - name: Assert file generations
       ansible.builtin.include_tasks: includes/assertions.yaml
@@ -37,8 +41,7 @@
       vars:
         operation: detect
         resources: "{{ test_resources }}"
-        data_store:
-          local: "~/test_backup"
+        data_store: "{{ test_data_store }}"
       register: resouce_manager_result
 
   always:
