--- a/tests/integration/targets/base_remediate/tasks/main.yaml
+++ b/tests/integration/targets/base_remediate/tasks/main.yaml
@@ -16,6 +16,11 @@
           - 'l3_interfaces'
           - 'bgp_address_family'
 
+    - name: Set data data_store
+      ansible.builtin.set_fact:
+        test_data_store:
+          local: "~/test_backup"
+
     - name: Run network.base validated content with persist operation
       ansible.builtin.include_role:
         name: network.base.resource_manager
@@ -23,8 +28,7 @@
         operation: persist
         remediate_empty: true
         resources: "{{ test_resources }}"
-        data_store:
-          local: "~/test_backup"
+        data_store: "{{ test_data_store }}"
 
     - name: Assert file generations
       ansible.builtin.include_tasks: includes/assertions.yaml
@@ -38,8 +42,7 @@
       vars:
         operation: remediate
         resources: "{{ test_resources }}"
-        data_store:
-          local: "~/test_backup"
+        data_store: "{{ test_data_store }}"
       register: resouce_manager_result
 
     - name: Assert that result
