--- a/roles/resource_manager/tasks/persist.yaml
+++ b/roles/resource_manager/tasks/persist.yaml
@@ -27,5 +27,5 @@
     loop_var: res
 
 - name: Include build tasks
-  ansible.builtin.include_tasks: includes/publish.yaml
+  ansible.builtin.include_tasks: includes/remote_publish.yaml
   when: data_store.scm.origin is defined
