--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,12 +47,24 @@ jobs:
               "python-version": "3.8"
             },
             {
+              "ansible-version": "stable-2.14",
+              "python-version": "3.12"
+            },
+            {
               "ansible-version": "stable-2.15",
               "python-version": "3.7"
             },
             {
               "ansible-version": "stable-2.15",
               "python-version": "3.8"
+            },
+            {
+              "ansible-version": "stable-2.15",
+              "python-version": "3.12"
+            },
+            {
+              "ansible-version": "stable-2.16",
+              "python-version": "3.9"
             },
             {
               "ansible-version": "milestone",
