--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -97,3 +97,15 @@ releases:
     - implement_tag.yaml
     - update_badge.yaml
     release_date: '2023-11-29'
+  5.0.0:
+    changes:
+      major_changes:
+        - Bumping `requires_ansible` to `>=2.14.0`, since previous ansible-core versions
+          are EoL now.
+      release_summary:
+        Starting from this release, the minimum `ansible-core` version
+        this collection requires is `2.14.0`. The last known version compatible with
+        ansible-core<2.14 is `v4.1.0`.
+    fragments:
+    - trivial_lint.yaml
+    release_date: '2023-12-01'
