--- a/galaxy.yml
+++ b/galaxy.yml
@@ -3,7 +3,8 @@ authors:
   - Rohit Thakur (@rohitthakur2590)
 dependencies:
   "ansible.netcommon": ">=6.0.0"
-  "ansible.utils": '>=3.0.0'
+  "ansible.utils": ">=3.0.0"
+  "ansible.scm": ">=2.0.0"
 license_file: LICENSE
 name: base
 description: Ansible Network Collection provides platform-agnostic resource management for given network OS.
