--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -100,12 +100,30 @@ releases:
   5.0.0:
     changes:
       major_changes:
-        - Bumping `requires_ansible` to `>=2.14.0`, since previous ansible-core versions
-          are EoL now.
-      release_summary:
-        Starting from this release, the minimum `ansible-core` version
+      - Bumping `requires_ansible` to `>=2.14.0`, since previous ansible-core versions
+        are EoL now.
+      release_summary: Starting from this release, the minimum `ansible-core` version
         this collection requires is `2.14.0`. The last known version compatible with
         ansible-core<2.14 is `v4.1.0`.
     fragments:
     - trivial_lint.yaml
     release_date: '2023-12-01'
+  6.0.0:
+    changes:
+      doc_changes:
+      - Eliminate the redundant installation section.
+      - Update README.
+      - Update the installation steps with correct url.
+      major_changes:
+      - Bumping `requires_ansible` to `>=2.15.0`, since previous ansible-core versions
+        are EoL now.
+      release_summary: 'With this release, the minimum required version of `ansible-core`
+        for this collection is `2.15.0`. The last version known to be compatible with
+        `ansible-core` versions below `2.15` is v5.0.0.
+
+        '
+    fragments:
+    - bump_215.yaml
+    - remove_redundant.yaml
+    - update_readme.yaml
+    release_date: '2024-06-12'
