--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,14 @@
 ---
-name: Release
-
-on:   # yamllint disable-line rule:truthy
+name: "Release collection"
+on:  # yamllint disable-line rule:truthy
   release:
     types: [published]
 
 jobs:
-  release_automation_hub:
-    uses: ansible/devtools/.github/workflows/release_ah.yml@main
+  release:
+    uses: ansible/ansible-content-actions/.github/workflows/release.yaml@main
     with:
-      environment: ah
+      environment: release
     secrets:
       ah_token: ${{ secrets.AH_TOKEN }}
+      ansible_galaxy_api_key: ${{ secrets.ANSIBLE_GALAXY_API_KEY }}
