--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,5 @@
 ---
-name: CI
+name: "CI"
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
@@ -14,86 +14,21 @@ on:  # yamllint disable-line rule:truthy
 
 jobs:
   changelog:
-    uses: ansible-network/github_actions/.github/workflows/changelog.yml@main
+    uses: ansible/ansible-content-actions/.github/workflows/changelog.yaml@main
     if: github.event_name == 'pull_request'
+  build-import:
+    uses: ansible/ansible-content-actions/.github/workflows/build_import.yaml@main
+  ansible-lint:
+    uses: ansible/ansible-content-actions/.github/workflows/ansible_lint.yaml@main
   sanity:
-    uses: ansible-network/github_actions/.github/workflows/sanity.yml@main
-    with:
-      matrix_include: "[]"
-      matrix_exclude: >-
-          [
-            {
-              "ansible-version": "stable-2.9"
-            },
-            {
-              "ansible-version": "stable-2.12",
-            },
-            {
-              "ansible-version": "stable-2.13",
-              "python-version": "3.7"
-            },
-            {
-              "ansible-version": "stable-2.13",
-              "python-version": "3.11"
-            },
-            {
-              "ansible-version": "stable-2.14",
-              "python-version": "3.7"
-            },
-            {
-              "ansible-version": "stable-2.14",
-              "python-version": "3.8"
-            },
-            {
-              "ansible-version": "stable-2.14",
-              "python-version": "3.12"
-            },
-            {
-              "ansible-version": "stable-2.15",
-              "python-version": "3.7"
-            },
-            {
-              "ansible-version": "stable-2.15",
-              "python-version": "3.8"
-            },
-            {
-              "ansible-version": "stable-2.15",
-              "python-version": "3.12"
-            },
-            {
-              "ansible-version": "stable-2.16",
-              "python-version": "3.9"
-            },
-            {
-              "ansible-version": "milestone",
-              "python-version": "3.7"
-            },
-            {
-              "ansible-version": "milestone",
-              "python-version": "3.8"
-            },
-            {
-              "ansible-version": "milestone",
-              "python-version": "3.9"
-            },
-            {
-              "ansible-version": "devel",
-              "python-version": "3.7"
-            },
-            {
-              "ansible-version": "devel",
-              "python-version": "3.8"
-            },
-            {
-              "ansible-version": "devel",
-              "python-version": "3.9"
-            },
-          ]
+    uses: ansible/ansible-content-actions/.github/workflows/sanity.yaml@main
   all_green:
     if: ${{ always() && (github.event_name != 'schedule') }}
     needs:
       - changelog
       - sanity
+      - ansible-lint
+      - build-import
     runs-on: ubuntu-latest
     steps:
       - run: >-
@@ -101,4 +36,6 @@ jobs:
           set([
           '${{ needs.changelog.result }}',
           '${{ needs.sanity.result }}',
+          '${{ needs.ansible-lint.result }}'
+          '${{ needs.build-import.result }}'
           ])"
