--- a/tests/integration/targets/base_deploy/tasks/main.yaml
+++ b/tests/integration/targets/base_deploy/tasks/main.yaml
@@ -1,9 +1,9 @@
 ---
 - name: Debug
   ansible.builtin.debug:
-    msg: "START network.base deploy opeartion integration tests on connection={{ ansible_connection }}"
+    msg: "START network.base deploy operation integration tests on connection={{ ansible_connection }}"
 
-- name: Cleanup, Read and Deploy
+- name: Cleanup, persist, and deploy
   block:
     - name: Reset configuration
       ansible.builtin.include_tasks: _cleanup.yaml
@@ -12,38 +12,39 @@
       ansible.builtin.set_fact:
         test_resources:
           - 'interfaces'
-          - 'l2_interfaces'
-          - 'l3_interfaces'
-          - 'bgp_global'
-          - 'bgp_address_family'
 
-    - name: Set data data_store
+    - name: Set local data store
       ansible.builtin.set_fact:
         test_data_store:
           local: "~/test_backup"
 
-    - name: Run network.base validated content with deploy operation
+    - name: Run persist role to gather and save facts
       ansible.builtin.include_role:
-        name: network.base.resource_manager
+        name: network.base.persist
       vars:
-        operation: persist
-        persist_empty: true
+        ansible_network_os: "cisco.ios.ios"
         resources: "{{ test_resources }}"
         data_store: "{{ test_data_store }}"
 
-    - name: Run network.base validated content with deploy operation
+    - name: Assert file generations
+      ansible.builtin.include_tasks: includes/assertions.yaml
+      loop: "{{ test_resources }}"
+      loop_control:
+        loop_var: filename
+
+    - name: Run deploy role to validate persisted data
       ansible.builtin.include_role:
-        name: network.base.resource_manager
+        name: network.base.deploy
       vars:
-        operation: deploy
         resources: "{{ test_resources }}"
         data_store: "{{ test_data_store }}"
-      register: resource_manager_result
+      register: deploy_result
 
-    - name: Assert that gresult
+    - name: Assert that deploy operation did not change state
       ansible.builtin.assert:
         that:
-          - resource_manager_result.changed == false
+          - deploy_result is defined
+          - deploy_result.changed == false
 
   always:
     - name: Reset configuration
